[project]
name = "boto3-client-cache"
version = "2.0.0"
description = "boto3-client-cache provides a concurrency-safe, bounded cache for boto3 clients with deterministic identity semantics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["botocore", "boto3"]
authors = [
    {name = "Mike Letts",email = "lettsmt@gmail.com"}
]
maintainers = [
  {name="Mike Letts", email="lettsmt@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]
keywords = [
    "boto",
    "boto3",
    "botocore",
    "cache",
    "client",
    "aws",
    "amazon web services",
    "client cache",
    "lru cache",
    "lfu cache",
]

[project.urls]
Homepage = "https://michaelthomasletts.com/boto3-client-cache"
Repository = "https://github.com/michaelthomasletts/boto3-client-cache"
Documentation = "https://michaelthomasletts.com/boto3-client-cache"

[dependency-groups]
dev = [
    "furo",
    "numpydoc",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-copybutton",
    "sphinxext-opengraph[social-cards]",
    "tomlkit",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["LICENSE", "boto3_client_cache/**"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["ALL"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
