[project]
name = "boto3-client-cache"
version = "2.1.6"
description = "A concurrency-safe, bounded cache for boto3 clients and resources with deterministic identity semantics."
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.10"
dependencies = ["botocore", "boto3"]
authors = [
    {name = "Mike Letts",email = "michael@61418.io"}
]
maintainers = [
  {name="61418", email="general@61418.io"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]
keywords = [
    "boto",
    "boto3",
    "botocore",
    "cache",
    "client",
    "aws",
    "amazon web services",
    "client cache",
    "lru cache",
    "lfu cache",
]

[project.urls]
Homepage = "https://61418.io/boto3-client-cache"
Repository = "https://github.com/61418/boto3-client-cache"
Documentation = "https://61418.io/boto3-client-cache"

[dependency-groups]
dev = [
    "furo",
    "numpydoc",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx",
    "sphinx-copybutton",
    "sphinxext-opengraph[social-cards]",
    "tomlkit",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["LICENSE", "NOTICE", "boto3_client_cache/**"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["ALL"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
